2001-07-30  Ezra Peisach  <epeisach@mit.edu>

	* ftp.c: Declare mech_type in struct gss_trials gss_OID to be
	compatible with GSS_C_NO_OID type. (was gss_OID *).

2001-07-27  Danilo Almeida  <dalmeida@mit.edu>

	* ftp.c: Remove local Win32-specific definition of gss_mech_krb5.
	Use GSS_C_NO_OID instead of gss_mech_krb5 for mech_type to use an
	implementation specific default.

2001-07-24  Tom Yu  <tlyu@mit.edu>

	* getpass.c: Remove duplicate definitions of sig_t, my_sig_t;
	they're already declared in ftp_var.h.

	* ftp_var.h (FDOPEN_SOCKET): Fix second arg.

2001-07-23  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in, cmds.c, ftp.c, ftp_var.h, getpass.c, glob.c,
	main.c, ruserpass.c, secure.c, secure.h: Quick and dirty Win32
	port.  Changes include using sockets more portably; changing the
	method of getting username, home directory, and temporary
	filenames; adding password reading code for Win32; directory
	enumeration via FindNextFile() rather than readdir(); removing OUT
	labels (which appear to cause problems with MSVC++ 6.0).  Since
	ANSI C, assume we have stdarg.h.

2001-07-03  Ezra Peisach  <epeisach@mit.edu>

	* secure.c: Instead of hard wiring the FUDGE_FACTOR, new variables
	to keep track of the total buffer length desired and the actual
	maximum that can be fitted. Add secure_determine_constants() to
	determine the mechanism dependent overhead. This has a hard limit
	for krb4 - for gssapi use gss_wrap_size_limit.

2001-06-15  Ezra Peisach  <epeisach@mit.edu>

	* cmds.c, domacro.c: Cast arguments to isspace() and isdigit()
	from char to int.

	* ftp.c: krb5_mk_priv(), krb5_mk_safe() expect C_Block *.

2001-05-01  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (setpeer): Port number should be unsigned short.  (Patch
	from Garry Zacheiss.)  Add upper-bound check in case short is not
	exactly 16 bits.  Don't truncate the port number before checking.

2001-04-27  Ezra Peisach  <epeisach@mit.edu>

	* ftp_var.h: Prototype for recvrequest() needs volatile